# Autonomus-voice-agent

./: .env  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICKSTART.md  backend_adapters.py  main.py  pyproject.toml  requirements.txt  test_tts.py
asr/: nemotron_asr.py  wenet_asr.py
audio/: recorder.py
audio-transcription/: asr_output_text.txt
audio-transcription/asr_service/api/: main.py
audio-transcription/asr_service/api/asr/: audio.py  model.py  utils.py
easyturn/: IMPLEMENTATION_SUMMARY.md  README.md  STATE_MACHINE.md  TESTING.md  __init__.py  acoustic_extractor.py  config.py  controller.py  dialogue_orchestrator.py  example.py  integrations.py  stability_tracker.py  verify_install.py
llm/: agent.py  controller.py  interfaces.py  llm.py  provider.py  registry.py  schemas.py  tools.py
piper/espeak-ng-data/voices/!v/: Alex
tts/: tts.py
vad/: vad_service.py
